--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [{ name = "marcin" }]
-dependencies = []
+dependencies = [
+    "dsm==0.5.3",
+]
 
 [project.scripts]
 a800mon = "a800mon.cli:main"
